funcionalidad de fetch() nombre y monto que pagó el donador

--- a/cliente-admin/public/historia/historia_del_mes.html
+++ b/cliente-admin/public/historia/historia_del_mes.html
@@ -62,7 +62,11 @@ body {
 </head>
 <body>
   <h1 style="text-align: center;">Historia del Mes</h1>
+
 <h2 id="greeting" style="text-align: center; font-weight: normal;">Hola.</h2>
+<h3 id="donation-amount" style="text-align: center; font-weight: normal; color: #555;"></h3>
+
+
 
   <div id="story-container">
     <p>Cargando historia...</p>
